--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,9 +19,11 @@
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.22",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
     "supabase": "^2.45.5",
     "tailwind-merge": "^3.3.1",
