--- a/webapp/package.json
+++ b/webapp/package.json
@@ -23,6 +23,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
+    "react-toastify": "^11.0.5",
     "supabase": "^2.45.5",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0"
