--- a/webapp/.env
+++ b/webapp/.env
@@ -1,1 +1,2 @@
 VITE_API_BASE_URL=https://movienight-ai.onrender.com
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_c3VidGxlLWdhbm5ldC0xMy5jbGVyay5hY2NvdW50cy5kZXYk
