--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -22,28 +22,28 @@ jobs:
       - name: 📥 Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # ← Mudado de 2 para 0 (necessário para RAG)
+          fetch-depth: 0 # Necessário para RAG indexar todo o histórico
           token: ${{ secrets.GH_TOKEN }}
 
       # ═══════════════════════════════════════════════════════
-      # 🧠 VERIFICAR SE RAG ESTÁ DISPONÍVEL
+      # 🧠 VERIFICAR SE RAG ESTÁ DISPONÍVEL OU CONSTRUIR
       # ═══════════════════════════════════════════════════════
-      - name: 🧠 Check RAG database
+      - name: 🧠 Check or Build RAG database
         id: check-rag
         run: |
-          if [ -d "./chroma_db" ]; then
+          if [ -d "./chroma_db" ] && [ -n "$(ls -A ./chroma_db 2>/dev/null)" ]; then
             echo "rag_available=true" >> $GITHUB_OUTPUT
             echo "✅ RAG database found - reviews will have full context!"
             
-            # Mostrar stats da BD
-            if [ -f "chroma_db/dependencies.json" ]; then
-              FILE_COUNT=$(cat chroma_db/dependencies.json | grep -o '"' | wc -l)
-              echo "📊 Database contains indexed codebase"
+            # Mostrar stats da BD se existir
+            if [ -f "chroma_db/chroma.sqlite3" ]; then
+              DB_SIZE=$(du -sh chroma_db | cut -f1)
+              echo "📊 Database size: $DB_SIZE"
             fi
           else
             echo "rag_available=false" >> $GITHUB_OUTPUT
-            echo "⚠️ RAG database not found - running without context"
-            echo "💡 Run 'Update RAG Index' workflow to enable context-aware reviews"
+            echo "⚠️ RAG database not found"
+            echo "🔨 Will build RAG database during review..."
           fi
 
       # ═══════════════════════════════════════════════════════
@@ -54,27 +54,38 @@ jobs:
         with:
           huggingface_token: ${{ secrets.HUGGINGFACE_TOKEN }}
           github_token: ${{ secrets.GH_TOKEN }}
-          # ↓ NOVO: Configurações RAG
-          enable_rag: ${{ steps.check-rag.outputs.rag_available }}
+          enable_rag: "true" # ← Sempre ativa RAG (a action constrói se não existir)
           rag_db_path: ./chroma_db
 
       # ═══════════════════════════════════════════════════════
-      # 📊 ESTATÍSTICAS (OPCIONAL)
+      # 💾 CACHE DA RAG DATABASE (OPCIONAL MAS RECOMENDADO)
+      # ═══════════════════════════════════════════════════════
+      - name: 💾 Cache RAG database
+        uses: actions/cache@v3
+        with:
+          path: ./chroma_db
+          key: rag-db-${{ github.repository }}-${{ hashFiles('**/*.py', '**/*.js', '**/*.ts') }}
+          restore-keys: |
+            rag-db-${{ github.repository }}-
+
+      # ═══════════════════════════════════════════════════════
+      # 📊 ESTATÍSTICAS
       # ═══════════════════════════════════════════════════════
       - name: 📊 Review Statistics
         if: always()
         run: |
           echo "### 📊 Review Statistics" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "- **RAG Enabled:** ${{ steps.check-rag.outputs.rag_available }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **RAG Enabled:** true" >> $GITHUB_STEP_SUMMARY
           echo "- **Commit:** ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
 
-          if [ "${{ steps.check-rag.outputs.rag_available }}" == "true" ]; then
+          if [ -d "./chroma_db" ]; then
+            DB_SIZE=$(du -sh chroma_db 2>/dev/null | cut -f1 || echo "unknown")
+            echo "- **RAG Database:** $DB_SIZE" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "✅ **Reviews include context from your entire codebase!**" >> $GITHUB_STEP_SUMMARY
           else
             echo "" >> $GITHUB_STEP_SUMMARY
-            echo "⚠️ **Reviews without RAG context**" >> $GITHUB_STEP_SUMMARY
-            echo "Run the 'Update RAG Index' workflow to enable smart reviews." >> $GITHUB_STEP_SUMMARY
+            echo "⚠️ **RAG database building failed**" >> $GITHUB_STEP_SUMMARY
           fi
