--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -1,4 +1,4 @@
-name: 🎓 AI Code Review (with RAG)
+name: 🎓 AI Code Review (with RAG + Groq)
 
 on:
   push:
@@ -57,12 +57,12 @@ jobs:
             rag-db-${{ github.repository }}-
 
       # ═══════════════════════════════════════════════════════
-      # 🤖 AI CODE REVIEW
+      # 🤖 AI CODE REVIEW (GROQ)
       # ═══════════════════════════════════════════════════════
-      - name: 🎓 AI Code Mentor
+      - name: 🎓 AI Code Mentor (Groq)
         uses: Dee-Tee11/ai-code-reviewer@main
         with:
-          huggingface_token: ${{ secrets.HUGGINGFACE_TOKEN }}
+          groq_api_key: ${{ secrets.GROQ_API_KEY }}
           github_token: ${{ secrets.GH_TOKEN }}
           enable_rag: ${{ steps.check-rag.outputs.rag_available }}
           rag_db_path: ./chroma_db
@@ -76,6 +76,7 @@ jobs:
           echo "### 📊 Review Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "- **Branch:** \`${{ github.ref_name }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **AI Provider:** ⚡ Groq (ultra-fast)" >> $GITHUB_STEP_SUMMARY
           echo "- **RAG Context:** ${{ steps.check-rag.outputs.rag_available == 'true' && '✅ Enabled' || '⚠️ Disabled' }}" >> $GITHUB_STEP_SUMMARY
 
           if [ "${{ steps.check-rag.outputs.rag_available }}" == "true" ]; then
