--- a/.rag/requirements.txt
+++ b/.rag/requirements.txt
@@ -3,3 +3,12 @@ sentence-transformers==2.3.1
 torch==2.1.2
 numpy<2.0.0
 transformers==4.36.2
+# AI Provider
+groq>=0.4.0
+
+# GitHub Integration  
+PyGithub>=2.1.1
+requests>=2.31.0
+
+# Utils
+pyyaml>=6.0
