--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -61,6 +61,9 @@ jobs:
       # ═══════════════════════════════════════════════════════
       - name: 🎓 AI Code Mentor (Groq)
         uses: Dee-Tee11/ai-code-reviewer@main
+        env:
+          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           groq_api_key: ${{ secrets.GROQ_API_KEY }}
           github_token: ${{ secrets.GH_TOKEN }}
