--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -1,87 +1,87 @@
-  name: 🎓 AI Code Review (with RAG + Groq)
+name: 🎓 AI Code Review (with RAG + Groq)
 
-  on:
-    push:
-      branches: ["**"]
-    pull_request:
-      types: [opened, synchronize, reopened]
+on:
+  push:
+    branches: ["**"]
+  pull_request:
+    types: [opened, synchronize, reopened]
 
-  jobs:
-    review:
-      runs-on: ubuntu-latest
+jobs:
+  review:
+    runs-on: ubuntu-latest
 
-      permissions:
-        contents: write
-        pull-requests: write
-        issues: write
+    permissions:
+      contents: write
+      pull-requests: write
+      issues: write
 
-      steps:
-        # ═══════════════════════════════════════════════════════
-        # 📥 CHECKOUT
-        # ═══════════════════════════════════════════════════════
-        - name: 📥 Checkout repository
-          uses: actions/checkout@v4
-          with:
-            fetch-depth: 0
-            token: ${{ secrets.GH_TOKEN }}
+    steps:
+      # ═══════════════════════════════════════════════════════
+      # 📥 CHECKOUT
+      # ═══════════════════════════════════════════════════════
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GH_TOKEN }}
 
-        # ═══════════════════════════════════════════════════════
-        # 🧠 VERIFICAR SE RAG DATABASE EXISTE
-        # ═══════════════════════════════════════════════════════
-        - name: 🧠 Check RAG Database
-          id: check-rag
-          run: |
-            if [ -d "./chroma_db" ] && [ -n "$(ls -A ./chroma_db 2>/dev/null)" ]; then
-              echo "rag_available=true" >> $GITHUB_OUTPUT
-              echo "✅ RAG database found - reviews will have full context!"
-              
-              if [ -f "chroma_db/chroma.sqlite3" ]; then
-                DB_SIZE=$(du -sh chroma_db | cut -f1)
-                echo "📊 Database size: $DB_SIZE"
-              fi
-            else
-              echo "rag_available=false" >> $GITHUB_OUTPUT
-              echo "⚠️ RAG database not found - review will proceed without context"
+      # ═══════════════════════════════════════════════════════
+      # 🧠 VERIFICAR SE RAG DATABASE EXISTE
+      # ═══════════════════════════════════════════════════════
+      - name: 🧠 Check RAG Database
+        id: check-rag
+        run: |
+          if [ -d "./chroma_db" ] && [ -n "$(ls -A ./chroma_db 2>/dev/null)" ]; then
+            echo "rag_available=true" >> $GITHUB_OUTPUT
+            echo "✅ RAG database found - reviews will have full context!"
+            
+            if [ -f "chroma_db/chroma.sqlite3" ]; then
+              DB_SIZE=$(du -sh chroma_db | cut -f1)
+              echo "📊 Database size: $DB_SIZE"
             fi
+          else
+            echo "rag_available=false" >> $GITHUB_OUTPUT
+            echo "⚠️ RAG database not found - review will proceed without context"
+          fi
 
-        # ═══════════════════════════════════════════════════════
-        # 💾 CACHE DA RAG DATABASE
-        # ═══════════════════════════════════════════════════════
-        - name: 💾 Restore RAG Database Cache
-          if: steps.check-rag.outputs.rag_available == 'true'
-          uses: actions/cache@v3
-          with:
-            path: ./chroma_db
-            key: rag-db-${{ github.repository }}-${{ hashFiles('**/*.py', '**/*.js', '**/*.ts', '**/*.tsx', '**/*.jsx') }}
-            restore-keys: |
-              rag-db-${{ github.repository }}-
+      # ═══════════════════════════════════════════════════════
+      # 💾 CACHE DA RAG DATABASE
+      # ═══════════════════════════════════════════════════════
+      - name: 💾 Restore RAG Database Cache
+        if: steps.check-rag.outputs.rag_available == 'true'
+        uses: actions/cache@v3
+        with:
+          path: ./chroma_db
+          key: rag-db-${{ github.repository }}-${{ hashFiles('**/*.py', '**/*.js', '**/*.ts', '**/*.tsx', '**/*.jsx') }}
+          restore-keys: |
+            rag-db-${{ github.repository }}-
 
-        # ═══════════════════════════════════════════════════════
-        # 🤖 AI CODE REVIEW (GROQ)
-        # ═══════════════════════════════════════════════════════
-        - name: 🎓 AI Code Mentor (Groq)
-          uses: Dee-Tee11/ai-code-reviewer@main
-          with:
-            groq: ${{ secrets.GROQ }}
-            github_token: ${{ secrets.GH_TOKEN }}
-            enable_rag: ${{ steps.check-rag.outputs.rag_available }}
-            rag_db_path: ./chroma_dbs
+      # ═══════════════════════════════════════════════════════
+      # 🤖 AI CODE REVIEW (GROQ)
+      # ═══════════════════════════════════════════════════════
+      - name: 🎓 AI Code Mentor (Groq)
+        uses: Dee-Tee11/ai-code-reviewer@main
+        with:
+          groq: ${{ secrets.GROQ }}
+          github_token: ${{ secrets.GH_TOKEN }}
+          enable_rag: ${{ steps.check-rag.outputs.rag_available }}
+          rag_db_path: ./chroma_db
 
-        # ═══════════════════════════════════════════════════════
-        # 📊 ESTATÍSTICAS
-        # ═══════════════════════════════════════════════════════
-        - name: 📊 Review Statistics
-          if: always()
-          run: |
-            echo "### 📊 Review Summary" >> $GITHUB_STEP_SUMMARY
-            echo "" >> $GITHUB_STEP_SUMMARY
-            echo "- **Branch:** \`${{ github.ref_name }}\`" >> $GITHUB_STEP_SUMMARY
-            echo "- **AI Provider:** ⚡ Groq (ultra-fast)" >> $GITHUB_STEP_SUMMARY
-            echo "- **RAG Context:** ${{ steps.check-rag.outputs.rag_available == 'true' && '✅ Enabled' || '⚠️ Disabled' }}" >> $GITHUB_STEP_SUMMARY
+      # ═══════════════════════════════════════════════════════
+      # 📊 ESTATÍSTICAS
+      # ═══════════════════════════════════════════════════════
+      - name: 📊 Review Statistics
+        if: always()
+        run: |
+          echo "### 📊 Review Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- **Branch:** \`${{ github.ref_name }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **AI Provider:** ⚡ Groq (ultra-fast)" >> $GITHUB_STEP_SUMMARY
+          echo "- **RAG Context:** ${{ steps.check-rag.outputs.rag_available == 'true' && '✅ Enabled' || '⚠️ Disabled' }}" >> $GITHUB_STEP_SUMMARY
 
-            if [ "${{ steps.check-rag.outputs.rag_available }}" == "true" ]; then
-              if [ -d "./chroma_db" ]; then
-                DB_SIZE=$(du -sh chroma_db 2>/dev/null | cut -f1 || echo "unknown")
-                echo "- **Database Size:** $DB_SIZE" >> $GITHUB_STEP_SUMMARY
-              fi
+          if [ "${{ steps.check-rag.outputs.rag_available }}" == "true" ]; then
+            if [ -d "./chroma_db" ]; then
+              DB_SIZE=$(du -sh chroma_db 2>/dev/null | cut -f1 || echo "unknown")
+              echo "- **Database Size:** $DB_SIZE" >> $GITHUB_STEP_SUMMARY
             fi
+          fi
