--- a/webapp/supabase/config.toml
+++ b/webapp/supabase/config.toml
@@ -355,6 +355,29 @@ verify_jwt = false
 import_map = "./functions/get-recommendations/deno.json"
 entrypoint = "./functions/get-recommendations/index.ts"
 
+
+
+
+[functions.send-friend-request]
+enabled = true
+verify_jwt = false
+import_map = "./functions/send-friend-request/deno.json"
+entrypoint = "./functions/send-friend-request/index.ts"
+
+
+[functions.get-friends-activity]
+enabled = true
+verify_jwt = false
+import_map = "./functions/get-friends-activity/deno.json"
+entrypoint = "./functions/get-friends-activity/index.ts"
+
+
+[functions.get-friends-movies]
+enabled = true
+verify_jwt = false
+import_map = "./functions/get-friends-movies/deno.json"
+entrypoint = "./functions/get-friends-movies/index.ts"
+
 [functions.generate-recommendations]
 enabled = true
 verify_jwt = false
